@@ -14,6 +14,7 @@ dillo-3.0 [August ??, 2011]
  - Remove 'fullscreen' key action.
  - Fixed a border case in URL resolver: empty path + {query|fragment} (BUG#948)
  - Avoid double draw after going Back or Forward (it takes half the time now!).
+ - Avoid a certificate dialog storm on some HTTPS sites (BUG#868).
    Patches: Jorge Arellano Cid
 +- Remove --enable-ansi configure option.
  - Limit saved cookie size.
